@@ -2488,7 +2488,7 @@ PUBLIC int postoptions ARGS1(
     PostPair *data = 0;
     DocAddress WWWDoc;  /* need on exit */
     int i;
-    int code;
+    int code = 0;
     BOOLEAN save_all = FALSE;
     int display_char_set_old = current_char_set;
     BOOLEAN raw_mode_old = LYRawMode;
@@ -2642,7 +2642,7 @@ PUBLIC int postoptions ARGS1(
 
 	/* Keypad Mode: SELECT */
 	if (!strcmp(data[i].tag, keypad_mode_string)) {
-	    int newval;
+	    int newval = 0;
 	    if (GetOptValues(keypad_mode_values, data[i].value, &newval)
 		 && keypad_mode != newval) {
 		keypad_mode = newval;
